# friday-night-programmer

./: .gitignore  Docker Environment.postman_environment.json  Friday Night Programmer.postman_collection.json  GitFlowIntroduction.md  README.md  UseCases.md  docker-compose.yml
documents/: AboutECS.md  BlanketTraits.md  CalculatePi.md  CvsRust.md  Embedding.md  GitFlowIntroduction.md  HowToCopilotSDK.md  HowToNats.md  LangchainWithCSharp.md  LocalizationBenchmark.md  MCPServer.md  MemoryManagement.md  OllamaWithDotNet.md  OutboxDemo.md  PhantomData.md  RAGPreperation.md  RustAndWasm.md  RustAndWasmRoundTwo.md  RustOnBbcMicro.md  SWE_Bench.md  SWE_Bench_LOCAL_1000.md  ServerSentEvents.md  SpecKitTutorial.md  TryThis00.md  TryThis01.md  UseCases.md  UsefulEnumInRust.md  Utilities.md
src/: .gitignore  zca.rs
src/SSEApi/: Gamer.cs  (+4 more)
src/ai-agent/: .env  Cargo.toml
src/ai-agent/src/: entity.rs  lib.rs  main.rs
src/micro-hello/: Cargo.toml  Embed.toml
src/micro-hello/src/: letter_pipe.rs  main.rs
src/micro-lights-two/: Cargo.toml  Embed.toml  link.x  memory.x
src/micro-lights-two/src/: main.rs
src/projects_api/: .env  Cargo.toml  Dockerfile  StudentProjects.db  docker-compose.yml
src/projects_api/migrations/: 001_create_tables.sql
src/projects_api/src/: main.rs  utility.rs
src/projects_api/src/controller/: assignment_controller.rs  criteria_controller.rs  history_controller.rs  member_controller.rs  mod.rs  project_controller.rs  team_controller.rs
src/projects_api/src/dto/: change_assignment_status_request.rs  created_criteria.rs  created_project.rs  created_team.rs  delete_criterion_request.rs  get_assignment_request.rs  mod.rs  move_member_request.rs  new_history.rs  operation_response.rs  prelude.rs  project_with_criteria.rs  update_scores_request.rs
src/projects_api/src/enums/: history_event.rs  mod.rs  status.rs
src/projects_api/src/model/: assignment.rs  criteria.rs  criteria_set.rs  criterion.rs  history.rs  member.rs  mod.rs  prelude.rs  project.rs  status.rs  team.rs
src/projects_api/src/repository/: assignment_repository.rs  criteria_repository.rs  database.rs  history_repository.rs  member_repository.rs  mod.rs  project_repository.rs  team_repository.rs
src/todo-api/: .env  Cargo.toml
src/todo-api/migrations/: 0001_create_todos.sql
src/todo-api/src/: error.rs  handlers.rs  main.rs  models.rs
(+414 files in other folders)
